# pdf-to-markdown

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/workflows/: build.yml  deploy.yml  security-scan.yml  test.yml
certs/: .gitkeep  README.md  generate-selfsigned.sh
docs/api/: README.md  authentication.md  endpoints.md  rate-limiting.md  schemas.md
docs/deployment/: README.md  aws.md  azure.md  docker.md  enterprise.md  gcp.md  local.md
docs/development/: architecture.md  release-process.md  setup.md  testing.md
docs/guides/: api-usage.md  cli-usage.md  cloud-storage.md  quickstart.md  troubleshooting.md
docs/security/: README.md  certificates.md  rbac.md  sandboxing.md  secrets-management.md
infra/systemd/: pdf2md-renew.service  pdf2md-renew.timer
nginx/: nginx.conf
nginx/conf.d/: api.conf  default.conf  mtls.conf.example
nginx/html/: 404.html  50x.html
nginx/snippets/: rate-limit.conf  security-headers.conf  ssl-params.conf
pdf-processor/: README.md  docker-compose.local.yml
pdf-processor/certs/: .gitkeep  generate-certs.sh
pdf-processor/nginx/: nginx.conf
pdf-processor/nginx/conf.d/: pdf2md.conf
pdf-processor/nginx/snippets/: proxy-params.conf  security-headers.conf  ssl-params.conf
pdf-processor/nginx_auth/: .gitkeep  redis-admin.htpasswd
pdf-processor/redis/: redis.conf  users.acl
pdf-processor/scripts/: down.sh  logs.sh  make-htpasswd.sh  up.sh
scripts/: backup.sh  deploy.sh  renew-certs.sh  rollback.sh  setup-letsencrypt.sh
secrets/: README.md
src/pdf2md/: __init__.py
src/pdf2md/api/: __init__.py  dependencies.py  main.py  middleware.py
src/pdf2md/api/routes/: __init__.py  admin.py  convert.py  health.py  jobs.py
src/pdf2md/auth/: __init__.py  models.py  permissions.py  rate_limiter.py  token_manager.py
src/pdf2md/cli/: __init__.py  main.py
src/pdf2md/cli/commands/: __init__.py  admin.py  convert.py  info.py  validate.py
src/pdf2md/core/: __init__.py  config.py  converter.py
src/pdf2md/database/: __init__.py  connection.py  schema.sql
src/pdf2md/extractors/: __init__.py  base.py  factory.py  pdfplumber_extractor.py  pymupdf_extractor.py
src/pdf2md/formatters/: __init__.py  base.py  json_formatter.py  markdown.py  text_formatter.py  yaml_formatter.py
src/pdf2md/handlers/: __init__.py  images.py  tables.py
src/pdf2md/jobs/: __init__.py  id_generator.py  models.py  queue.py  worker.py
src/pdf2md/security/: __init__.py  resource_limits.py  sandbox.py  validator.py
src/pdf2md/storage/: __init__.py  base.py  config.py  factory.py
src/pdf2md/storage/blob/: __init__.py  azure_blob.py  gcs.py  local.py  s3.py
src/pdf2md/storage/utils/: __init__.py  retry.py
src/pdf2md/tokens/: __init__.py  base.py  claude_counter.py  custom_counter.py  openai_counter.py
tests/: test_api_auth.py  test_api_jobs.py  test_extractors.py  test_formatters.py  test_rate_limiting.py  test_rbac.py  test_security.py  test_storage_blob.py  test_tokens.py
